# fingerprinting-poc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  debug.h  fingerprinting_poc  main.c
docker/: servers.sh
fingerprint_functions/: http-header-ordering.c  http-header-ordering.h  http_header_ordering.c  http_header_ordering.h  http_headers.c  http_headers.h  presence_in_file.c  presence_in_file.h  presence_in_reply.h
src/: debug.h  main.c
src/fingerprint_functions/: banner_report.c  banner_report.h  fingerprint_functions.c  fingerprint_functions.h  http_header_ordering.c  http_header_ordering.h  http_headers.c  http_headers.h  presence_in_reply.c  presence_in_reply.h
src/resources/: array.c  array.h  http_headers.c  http_headers.h
src/signatures/: create_signature.c  create_signature.h  signatures.c  signatures.h  signatures.xml
